# paylink

./: CMakeLists.txt  NOTES.md  configuration.toml  main.cpp  version.h.in
example/: CMakeLists.txt  configuration.toml  main.c  main.cpp
include/: Serial.h  acceptor.h  callbacks.h  dispenser.h  io.h  logger.h  pn532.h  scheduler.h  serial.h  stm.h  system.h  task.h  thread_safe_queue.h  utils.h  version.h
lib/: CMakeLists.txt  version.h.in
lib/include/: callback_context.h  dispenser.h  logger.h  pn532.h  scheduler.h  stm.h  system.h  task.h  thread_safe_queue.h  version.h
lib/include/paylink/: callbacks.h  paylink_c_api.h
lib/src/: acceptor.cpp  dispenser.cpp  paylink_c_api.cpp  pn532.cpp  scheduler.cpp  serial.cpp  stm.cpp  system.cpp  task.cpp  utils.cpp
src/: Serial.cpp  acceptor.cpp  dispenser.cpp  main.cpp  paylink_c_api.cpp  pn532.cpp  scheduler.cpp  serial.cpp  stm.cpp  system.cpp  utils.cpp
